updating consultancy footer

--- a/Css/Consultancy.css
+++ b/Css/Consultancy.css
@@ -362,6 +362,7 @@ footer{
     .mamtos{
         flex-direction: column;
         padding: 20px;
+        gap: 20px;
     }
     .social{
         flex-direction: column;
