--- a/Css/Contract.css
+++ b/Css/Contract.css
@@ -339,7 +339,7 @@ footer{
     }
     .testimony-1{
         flex-direction: column;
-
+        width: 100%;
     }
     .mamtos{
         flex-direction: column;
@@ -369,6 +369,23 @@ footer{
     }
     .logo img{
         height: 55px;
+    }
+    .pics{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+    }
+    .clients h2{
+        font-size: 25px;
+    }
+    .testimony{
+        padding: 10px;
+        width: 100%;
+
+    }
+    .you{
+        width: 100%;
+        padding: 10px;
     }
 
 }
